fix: alterando html para consumir api

--- a/src/pages/TelaMeusProjetos/projetos.html
+++ b/src/pages/TelaMeusProjetos/projetos.html
@@ -70,21 +70,7 @@
 
         <input type="text" name="tags" id="tags" placeholder="Buscar tags" />
 
-        <div class="meus-projetos__cards">
-          <div
-            class="meus-projetos__card--ativado meus-projetos__card"
-            id="abrir-modal"
-          >
-            <img src="./assets/collections.svg" alt="ícone arquivo" />
-
-            <p>Adicione seu primeiro projeto</p>
-
-            <p>Compartilhe seu talento com milhares de pessoas</p>
-          </div>
-
-          <div class="meus-projetos__card"></div>
-
-        </div>
+        <div class="meus-projetos__cards" id="container-projetos-usuario"></div>
       </section>
       <!--MODAL-->
 
