feat: finalizando card projetos de usuário

--- a/src/pages/TelaMeusProjetos/projetos.html
+++ b/src/pages/TelaMeusProjetos/projetos.html
@@ -171,11 +171,13 @@
       </dialog>
     </main>
     <script src="./js/api/api-adicionar-projeto.js"></script>
+    <script src="./js/api/api-encontrar-projetos.js"></script>
     <script src="./js/dropdown.js"></script>
     <script src="./js/imagem-arquivo.js"></script>
     <script src="./js/formulario-add-projeto.js"></script>
     <script src="./js/modal-adicionar-projetos.js"></script>
     <script src="./js/modal-visualizar-projetos.js"></script>
     <script src="./js/modal-mensagem-sucesso.js"></script>
+    <script src="./js/dropdown-excluir-editar.js"></script>
   </body>
 </html>
