fix: adicionado fotos de perfil e projeto na div

--- a/src/pages/TelaDescobrir/TelaDescobrir.html
+++ b/src/pages/TelaDescobrir/TelaDescobrir.html
@@ -75,8 +75,13 @@
             <!-- lugar de exibir os projetos -->
             <div class="exibirprojetos">
                 <!-- <div class="projeto"></div> -->
-                <div class="projeto"></div>
-                <div class="projeto"></div>
+                <div class="projeto">
+                    <img src="assets/foto_projeto_teste.png" alt="">
+                    <div class="rodapeProjeto">
+                        <img src="assets/perfil.png" alt="">
+                        <p>Gabriel Mazer 30/01</p>
+                    </div>
+                </div>
              </div>
         </div>
     </main>
