feat: html e js da janela que abre ao clicar no projeto

--- a/src/pages/TelaDescobrir/TelaDescobrir.html
+++ b/src/pages/TelaDescobrir/TelaDescobrir.html
@@ -44,7 +44,7 @@
             </div>
             <!-- botões do menu -->
             <div class="infoMenu">
-                <a href="#">
+                <a href="../TelaMeusProjetos/projetos.html">
                     <div class="butinfoMenu">Meus Projetos</div>
                 </a>
                 <a href="#">
@@ -85,6 +85,13 @@
              </div>
         </div>
     </main>
+
+    <!-- -- janela que abre ao clicar no projeto -- -->
+    <div id="pop">
+        <img src="" alt="" id="imagempop">
+         <p></p> 
+         <div class="fechar" onclick="fecharpop()">X</div>
+    </div>
 
     <!-- código JS -->
     <script src="./js/menu.js"> </script>
