--- a/src/pages/TelaDescobrir/TelaDescobrir.html
+++ b/src/pages/TelaDescobrir/TelaDescobrir.html
@@ -95,6 +95,7 @@
 
     <!-- código JS -->
     <script src="./js/menu.js"> </script>
+    <script src="./js/janela.js"> </script>
 
 </body>
 </html>
