feat: mensagens de sucesso e falha ao cadastrar usuário

--- a/src/pages/TelaCadastro/TelaCadastro.html
+++ b/src/pages/TelaCadastro/TelaCadastro.html
@@ -29,17 +29,16 @@
         <img src="./assets/img-cadastro.png" alt="imagem-tela-cadastro" />
       </div>
       <!-- Mensagem concluido com sucesso -->
-  
-      <section>
-       <div class="mensagem-sucesso mensagem-desaparecer" id="mensagem-sucesso">
-        <img src="./assets/CheckCircleOutlined.svg" alt="">
-        <p id="mensagem"></p>
-       </div>
-      </section>
 
       <!-- container formulário -->
 
       <div class="container-form">
+
+        <div class="container-mensagem-sucesso mensagem-desaparecer" id="mensagem-sucesso">
+          <img src="./assets/CheckCircleOutlined.svg" alt="">
+          <p id="mensagem" class="mensagem-sucesso"></p>
+         </div>
+
         <h5 class="title">Cadastre-se</h5>
 
         <form action="" class="w-100 form-sign-in">
