--- a/src/pages/TelaMeusProjetos/projetos.html
+++ b/src/pages/TelaMeusProjetos/projetos.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="google-signin-client_id" content="414036471424-i2accnpsbjitfiji6b177eqgthr9mm2n.apps.googleusercontent.com">
     <title>Meus projetos</title>
     <link rel="stylesheet" href="./css/style.css" />
   </head>
