fix: nome do arquivo js

--- a/src/pages/TelaDescobrir/TelaDescobrir.html
+++ b/src/pages/TelaDescobrir/TelaDescobrir.html
@@ -110,7 +110,7 @@
 
     <!-- código JS -->
     <script src="./js/menu.js"> </script>
-    <script src="./js/janela.js"> </script>
+    <script src="./js/popup.js"> </script>
 
 </body>
 </html>
