feat: abrir modal excluir projetos

--- a/src/pages/TelaMeusProjetos/projetos.html
+++ b/src/pages/TelaMeusProjetos/projetos.html
@@ -223,6 +223,6 @@
     <script src="./js/formulario-add-projeto.js"></script>
     <script src="./js/modal-adicionar-projetos.js"></script>
     <script src="./js/modal-visualizar-projetos.js"></script>
-
+    <script src="./js/modal-excluir-projeto.js"></script>
   </body>
 </html>
