--- a/src/pages/TelaDescobrir/TelaDescobrir.html
+++ b/src/pages/TelaDescobrir/TelaDescobrir.html
@@ -73,15 +73,15 @@
                 <input type="text" name="" id="buscarTags" placeholder="Buscar tags">
             </div>
             <!-- lugar de exibir os projetos -->
-            <div class="exibirprojetos">
+            <div class="exibirprojetos" id="container-projetos">
                 <!-- <div class="projeto"></div> -->
-                <div class="projeto">
+                <!-- <div class="projeto">
                     <img src="assets/foto_projeto_teste.png" alt="">
                     <div class="rodapeProjeto">
                         <img src="assets/perfil.png" alt="">
                         <p>Gabriel Mazer</p>
                     </div>
-                </div>
+                </div> -->
              </div>
         </div>
     </main>
@@ -111,6 +111,7 @@
     <!-- código JS -->
     <script src="./js/menu.js"> </script>
     <script src="./js/popup.js"> </script>
+    <script src="./js/api.js"> </script>
 
 </body>
 </html>
