fix: fixado erro ao abrir popup

--- a/src/pages/TelaDescobrir/TelaDescobrir.html
+++ b/src/pages/TelaDescobrir/TelaDescobrir.html
@@ -75,13 +75,13 @@
             <!-- lugar de exibir os projetos -->
             <div class="exibirprojetos" id="container-projetos">
                 <!-- <div class="projeto"></div> -->
-                <!-- <div class="projeto">
+                <div class="projeto" onclick="abrirpop(this)">
                     <img src="assets/foto_projeto_teste.png" alt="">
                     <div class="rodapeProjeto">
                         <img src="assets/perfil.png" alt="">
                         <p>Gabriel Mazer</p>
                     </div>
-                </div> -->
+                </div>
              </div>
         </div>
     </main>
