feat: descrição e link no popup do projeto tela descobrir

--- a/src/pages/TelaDescobrir/TelaDescobrir.html
+++ b/src/pages/TelaDescobrir/TelaDescobrir.html
@@ -81,6 +81,8 @@
                         <img src="assets/perfil.png" alt="">
                         <p>Gabriel Mazer</p>
                     </div>
+                    <p style="display: none;"> descricao</p>
+                    <a href="#" style="display: none;">link</a>
                 </div>
              </div>
         </div>
