fix: ajustes popup tela descobrir

--- a/src/pages/TelaDescobrir/TelaDescobrir.html
+++ b/src/pages/TelaDescobrir/TelaDescobrir.html
@@ -102,8 +102,8 @@
             <img src="" alt="" id="imagempopProjeto">
         </div>
          <div class="popfooter">
-             <p id="descri">descriçao: Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque quas facere aspernatur saepe repudiandae officiis blanditiis dolorem minima voluptate. Omnis cupiditate assumenda nemo sit facilis nulla, quae sunt modi! Facilis?</p>
-             <a href="#">link</a>
+             <p id="descri"></p>
+             <a href="#" id="linkPop">Download</a>
          </div>
          <div class="fechar" onclick="fecharpop()"><img src="./assets/remover.png" alt="" style="width: 24px;"></div>
     </div>
