feat: verificação token existente

--- a/src/pages/TelaMeusProjetos/projetos.html
+++ b/src/pages/TelaMeusProjetos/projetos.html
@@ -283,15 +283,17 @@
         <button><a href="./projetos.html">Voltar para projetos</a></button>
       </dialog>
     </main>
+    <script src="./js/valida-token.js"></script>
     <script src="./js/api/api-adicionar-projeto.js"></script>
     <script src="./js/api/api-encontrar-projetos.js"></script>
     <script src="./js/dropdown.js"></script>
     <script src="./js/imagem-arquivo.js"></script>
+    <script src="./js/imagem-arquivo-editar.js"></script>
     <script src="./js/formulario-add-projeto.js"></script>
     <script src="./js/modal-adicionar-projetos.js"></script>
     <script src="./js/modal-visualizar-projetos.js"></script>
     <script src="./js/modal-excluir-projeto.js"></script>
     <script src="./js/modal-editar-projeto.js"></script>
-    <script src="./js/imagem-arquivo-editar.js"></script>
+
   </body>
 </html>
