--- a/src/pages/TelaDescobrir/TelaDescobrir.html
+++ b/src/pages/TelaDescobrir/TelaDescobrir.html
@@ -111,9 +111,9 @@
     <div id="telaescura" onclick="fecharpop()"></div>
 
     <!-- código JS -->
+    <script src="../TelaMeusProjetos/js/valida-token.js"></script>
     <script src="./js/menu.js"> </script>
     <script src="./js/popup.js"> </script>
     <script src="./js/api.js"> </script>
-
 </body>
 </html>
