--- a/src/pages/TelaCadastro/TelaCadastro.html
+++ b/src/pages/TelaCadastro/TelaCadastro.html
@@ -108,7 +108,7 @@
           </div>
 
           <button type="submit" class="btn btn-primary btn-submit" id="botao-cadastrar">
-            CADASTRAR
+            Cadastrar
           </button>
     
           </div>
