feat: consumindo apis de atualizar projetos e organização do código

--- a/src/pages/TelaMeusProjetos/projetos.html
+++ b/src/pages/TelaMeusProjetos/projetos.html
@@ -265,16 +265,17 @@
           <button
             class="button-salvar"
             form="formulario-editar"
-            id="button-salvar-editar"
+            id="button-editar-projeto"
           >
-            SALVAR
+            Salvar
           </button>
           <button class="button-cancelar" id="button-cancelar-editar">
-            CANCELAR
+            Cancelar
           </button>
         </div>
         
       </dialog>
+
       <dialog id="modal-mensagem-sucesso-editar" class="dialog-add-projeto">
         <p>Edição concluida com sucesso!</p>
 
@@ -285,7 +286,7 @@
     </main>
     <script src="./js/valida-token.js"></script>
     <script src="./js/api/api-adicionar-projeto.js"></script>
-    <script src="./js/api/api-encontrar-projetos.js"></script>
+    <script src="./js/api/consome-apis.js"></script>
     <script src="./js/dropdown.js"></script>
     <script src="./js/imagem-arquivo.js"></script>
     <script src="./js/imagem-arquivo-editar.js"></script>
