fix: ajeitando dropdown responsivo tela meus projetos

--- a/src/pages/TelaMeusProjetos/projetos.html
+++ b/src/pages/TelaMeusProjetos/projetos.html
@@ -36,7 +36,7 @@
           </a>
         </div>
 
-        <nav>
+        <nav class="cabecalho__lista-nav">
           <ul class="cabecalho__lista">
             <li>
               <a href="../TelaMeusProjetos/projetos.html">Meus Projetos</a>
