fix: mudança no nome dos arquivos, pastas e caminhos para facilitar URL

--- a/descobrir/descobrir.html
+++ b/descobrir/descobrir.html
@@ -21,7 +21,7 @@
             <div class="menu" onclick="menu()"> <img src="assets/menu.png" alt=""> </div>
             <div class="logo"> <img src="assets/logo.png" alt=""> </div>
             <!-- botão de projetos -->
-            <a href="../TelaMeusProjetos/projetos.html">
+            <a href="../projetos/projetos.html">
                 <div class="botaoprojetos"><h6>Meus Projetos</h6></div>
             </a>
             <!-- botão de Descobrir -->
@@ -44,7 +44,7 @@
             </div>
             <!-- botões do menu -->
             <div class="infoMenu">
-                <a href="../TelaMeusProjetos/projetos.html">
+                <a href="../projetos/projetos.html">
                     <div class="butinfoMenu">Meus Projetos</div>
                 </a>
                 <a href="#">
@@ -111,7 +111,7 @@
     <div id="telaescura" onclick="fecharpop()"></div>
 
     <!-- código JS -->
-    <script src="../TelaMeusProjetos/js/valida-token.js"></script>
+    <script src="../projetos/js/valida-token.js"></script>
     <script src="./js/menu.js"> </script>
     <script src="./js/popup.js"> </script>
     <script src="./js/api.js"> </script>
