--- a/login/index.html
+++ b/login/index.html
@@ -68,7 +68,7 @@
           <p>
             <a
               class="link-opacity-75 link-cadastro"
-              href="../TelaCadastro/TelaCadastro.html"
+              href="../cadastro/cadastro.html"
               >Cadastre-se</a
             >
           </p>
