--- a/projetos/projetos.html
+++ b/projetos/projetos.html
@@ -23,7 +23,7 @@
           <nav class="cabecalho__links-dropdown" id="dropdown">
             <ul class="cabecalho__lista-dropdown">
               <li><a href="projetos.html">Meus Projetos</a></li>
-              <li><a href="#">Descobrir</a></li>
+              <li><a href="../descobrir/descobrir.html">Descobrir</a></li>
               <li><a href="#">Configurações</a></li>
             </ul>
           </nav>
@@ -39,9 +39,9 @@
         <nav class="cabecalho__lista-nav">
           <ul class="cabecalho__lista">
             <li>
-              <a href="../TelaMeusProjetos/projetos.html">Meus Projetos</a>
+              <a href="#">Meus Projetos</a>
             </li>
-            <li><a href="../TelaDescobrir/TelaDescobrir.html">Descobrir</a></li>
+            <li><a href="../descobrir/descobrir.html">Descobrir</a></li>
           </ul>
         </nav>
       </div>
