fix: estilização mensagem de sucesso

--- a/cadastro/cadastro.html
+++ b/cadastro/cadastro.html
@@ -37,7 +37,7 @@
         <div class="container-mensagem-sucesso mensagem-desaparecer" id="mensagem-sucesso">
           <img src="./assets/CheckCircleOutlined.svg" alt="">
           <p id="mensagem" class="mensagem-sucesso"></p>
-         </div>
+        </div>
 
         <h5 class="title">Cadastre-se</h5>
 
@@ -107,9 +107,12 @@
             </div>
           </div>
 
+          <a href="../login/index.html" class="login-voltar">Voltar para o login</a>
+
           <button type="submit" class="btn btn-primary btn-submit" id="botao-cadastrar">
             Cadastrar
           </button>
+
     
           </div>
           <script src="./js/api-cadastro.js"></script>
