--- a/login/index.html
+++ b/login/index.html
@@ -78,7 +78,7 @@
             class="btn btn-primary btn-submit"
             id="botao-login"
           >
-            ENTRAR
+            Entrar
           </button>
         </form>
       </div>
