feat: criação da responsividade para os cards descobrir

--- a/descobrir/descobrir.html
+++ b/descobrir/descobrir.html
@@ -70,7 +70,7 @@
         <div class="container">
             <!-- input de buscar tags -->
             <div class="buscatag">
-                <input type="text" name="" id="buscarTags" placeholder="Buscar tags">
+                <input class="tags-descobrir" type="text" name="" id="buscarTags" placeholder="Buscar tags">
             </div>
             <!-- lugar de exibir os projetos -->
             <div class="exibirprojetos" id="container-projetos">
