fix: responsividade popup projetos descobrir

--- a/descobrir/descobrir.html
+++ b/descobrir/descobrir.html
@@ -88,7 +88,7 @@
             <div class="tag">tags</div>
         </div> 
          <div class="imgprojeto">
-            <img src="" alt="" id="imagempopProjeto">
+            <img src="" alt="" id="imagempopProjeto" class="imagem-projeto-usuarios">
         </div>
          <div class="popfooter">
              <p id="descri"></p>
