--- a/cadastro/cadastro.html
+++ b/cadastro/cadastro.html
@@ -41,9 +41,9 @@
 
         <h5 class="title">Cadastre-se</h5>
 
-        <form action="" class="w-100 form-sign-in">
+        <form class=" form-sign-in">
           <!-- nome -->
-          <div class="w-100 row input-field" id="name-lastname">
+          <div class=" row input-field" id="name-lastname">
             <div class="col mb-4">
               <label for="name-user" class="form-label">Nome</label>
               <input
@@ -73,7 +73,7 @@
             </div>
           </div>
           <!-- email -->
-          <div class="w-100 row input-field">
+          <div class=" row input-field">
             <div class="mb-4">
               <label for="exampleInputEmail1" class="form-label"
                 >Email address</label
@@ -91,7 +91,7 @@
             </div>
           </div>
           <!-- senha -->
-          <div class="w-100 row input-field">
+          <div class=" row input-field">
             <div class="mb-3">
               <label for="exampleInputPassword1" class="form-label"
                 >Password</label
@@ -107,7 +107,7 @@
             </div>
           </div>
 
-          <button type="submit" class="btn btn-primary btn-submit" id="botao-cadastrar">
+          <button type="submit" class="row btn btn-primary btn-submit" form="form-sign-in" id="botao-cadastrar">
             Cadastrar
           </button>
     
