feat: titulo e data do DB aparecendo no popup

--- a/descobrir/descobrir.html
+++ b/descobrir/descobrir.html
@@ -82,7 +82,10 @@
         <div class="headerpop">
             <div class="fotoEnome">
                 <img src="" alt="imagemperfil" id="imagemperfilpop">
-                <p id="nomepop">nome</p>
+                <div>
+                    <p id="nomepop">nome</p>
+                    <p id="datapop">05/01</p>
+                </div>
             </div>
             <p id="titulopop">titulo</p>
             <div class="tag">tags</div>
