fix: tela escura e popup seguindo a rolagem

--- a/descobrir/descobrir.html
+++ b/descobrir/descobrir.html
@@ -77,7 +77,7 @@
         </div>
     </main>
 
-    <!-- -- janela que abre ao clicar no projeto -- -->
+    <!-- -- popup que abre ao clicar no projeto -- -->
     <div id="pop">
         <div class="headerpop">
             <div class="fotoEnome">
