fix: ajustando responsividade  da tela de editar e adicionar projetos

--- a/cadastro/cadastro.html
+++ b/cadastro/cadastro.html
@@ -98,7 +98,7 @@
               >
               <input
                 type="password"
-                class="form-control"
+                class="form-control password"
                 id="password"
                 spellcheck="false"
                 autocomplete="off"
