--- a/projetos/projetos.html
+++ b/projetos/projetos.html
@@ -119,6 +119,7 @@
             <input type="text" placeholder="Tags" id="tag-projeto" required />
             <input type="text" placeholder="Link" id="link-projeto" required />
             <textarea
+            class="textarea-descricao"
               name="descricao"
               id="descricao-projeto"
               cols="30"
