fix: ajustando medidas dos títulos

--- a/projetos/projetos.html
+++ b/projetos/projetos.html
@@ -39,9 +39,11 @@
         <nav class="cabecalho__lista-nav">
           <ul class="cabecalho__lista">
             <li>
-              <a href="#">Meus Projetos</a>
+              <h6><a href="#">Meus Projetos</a></h6>
             </li>
-            <li><a href="../descobrir/descobrir.html">Descobrir</a></li>
+            <h6>
+              <li><a href="../descobrir/descobrir.html">Descobrir</a></li>
+            </h6>
           </ul>
         </nav>
       </div>
