fix: <h6> botão meus projetos e descobrir

--- a/descobrir/descobrir.html
+++ b/descobrir/descobrir.html
@@ -22,11 +22,11 @@
             <div class="logo"> <img src="assets/logo.png" alt=""> </div>
             <!-- botão de projetos -->
             <a href="../projetos/projetos.html">
-                <div class="botaoprojetos"><h6>Meus Projetos</h6></div>
+                <h6 class="botaoprojetos">Meus Projetos</h6>
             </a>
             <!-- botão de Descobrir -->
             <a href="#">
-                <div class="descobrir"><h6>Descobrir</h6></div>
+                <h6 class="descobrir">Descobrir</h6>
             </a>
         </div>
         <!-- parte final do header -->
