--- a/descobrir/descobrir.html
+++ b/descobrir/descobrir.html
@@ -53,7 +53,7 @@
             </div>
             <!-- botão de sair -->
             <a href="#">
-                <div class="sair">
+                <div class="sair" id="logout">
                     <img src="assets/_Icon_sair.png" alt=""><p style="color: black;">Sair</p>
                 </div>
             </a>
@@ -104,6 +104,7 @@
 
     <!-- código JS -->
     <script src="../projetos/js/valida-token.js"></script>
+    <script src="./js/logout.js"></script>
     <script src="./js/menu.js"> </script>
     <script src="./js/popup.js"> </script>
     <script src="./js/api.js"> </script>
