feat: encontrado projetos do usuário por tag

--- a/projetos/projetos.html
+++ b/projetos/projetos.html
@@ -76,7 +76,7 @@
       <section class="meus-projetos">
         <p>Meus Projetos</p>
 
-        <input type="text" name="tags" id="tags" placeholder="Buscar tags" />
+        <input type="text" name="tags" id="input-tags" value="" placeholder="Buscar tags" />
 
         <div class="meus-projetos__cards" id="container-projetos-usuario"></div>
       </section>
