--- a/descobrir/descobrir.html
+++ b/descobrir/descobrir.html
@@ -70,7 +70,7 @@
         <div class="container">
             <!-- input de buscar tags -->
             <div class="buscatag">
-                <input class="tags-descobrir" type="text" name="" id="buscarTags" placeholder="Buscar tags">
+                <input class="tags-descobrir" type="text" name="" id="buscar-tags-descobrir" placeholder="Buscar tags">
             </div>
             <!-- lugar de exibir os projetos -->
             <div class="exibirprojetos" id="container-projetos">
