feat: desabilitando botões para a chamada da api

--- a/projetos/projetos.html
+++ b/projetos/projetos.html
@@ -137,10 +137,10 @@
           </p>
         </div>
         <div class="buttons">
-          <button class="button-salvar" form="formulario-projeto">
-            SALVAR
+          <button class="button-salvar" form="formulario-projeto" id="botao-salvar-adicionar-projeto">
+            Salvar
           </button>
-          <button class="button-cancelar" id="button-cancelar">CANCELAR</button>
+          <button class="button-cancelar" id="button-cancelar">Cancelar</button>
         </div>
       </dialog>
       <!-- MODAL VISUALIZAR IMAGEM-->
