fix: transições para cores dos botões

--- a/projetos/projetos.html
+++ b/projetos/projetos.html
@@ -68,7 +68,7 @@
 
             <p>Brasil</p>
 
-            <button id="botao-abrir-modal">Adicionar Projeto</button>
+            <button id="botao-abrir-modal" class="botao-adicionar-projetos">Adicionar Projeto</button>
           </div>
         </div>
       </section>
