--- a/login/index.html
+++ b/login/index.html
@@ -31,7 +31,8 @@
       <div class="container-login">
         <h3 class="text-begin my-4">Entre no Orange Portifólio</h3>
         <!--BOTÃO LOGIN GOOGLE-->
-        <div class="g-signin2" data-onsuccess="onSignIn"></div>
+        <div class="g-signin2" data-longtitle="true"></div>
+        <button onclick="trySampleRequest();" >Try sample request</button>
         <!--INICIO FORMULARIO-->
         <form class="my-4 form-login">
           <!--LABEL EMAIL-->
@@ -84,6 +85,7 @@
       </div>
     </main>
     <script src="https://apis.google.com/js/platform.js" async defer></script>
+
     <script src="./js/api-login-google.js"></script>
     <script src="./js/api-login.js"></script>
   </body>
