--- a/login/index.html
+++ b/login/index.html
@@ -31,8 +31,9 @@
       <div class="container-login">
         <h3 class="text-begin my-4">Entre no Orange Portifólio</h3>
         <!--BOTÃO LOGIN GOOGLE-->
-        <div class="g-signin2" data-longtitle="true"></div>
-        <button onclick="trySampleRequest();" >Try sample request</button>
+        
+        <div id="buttonDiv"></div>
+        
         <!--INICIO FORMULARIO-->
         <form class="my-4 form-login">
           <!--LABEL EMAIL-->
@@ -85,7 +86,10 @@
       </div>
     </main>
     <script src="https://apis.google.com/js/platform.js" async defer></script>
-
+    <script src="https://accounts.google.com/gsi/client" async defer></script>
+    <script src="https://unpkg.com/jwt-decode/build/jwt-decode.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jsonwebtoken/8.5.1/jsonwebtoken.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/jwt-decode@3.0.0/dist/index.min.js"></script>
     <script src="./js/api-login-google.js"></script>
     <script src="./js/api-login.js"></script>
   </body>
