fix: deixando botão de download igual ao intruído pelo figma

--- a/descobrir/descobrir.html
+++ b/descobrir/descobrir.html
@@ -95,7 +95,9 @@
         </div>
          <div class="popfooter">
              <p id="descri"></p>
-             <a href="#" id="linkPop">Download</a>
+             <span>Download</span>
+             <br>
+             <a href="#" id="linkPop"></a>
          </div>
          <div class="fechar" onclick="fecharpop()"><img src="./assets/remover.png" alt="" style="width: 24px;"></div>
     </div>
