fix: correção para que tags apareçam no popup descobrir

--- a/descobrir/descobrir.html
+++ b/descobrir/descobrir.html
@@ -88,7 +88,7 @@
                 </div>
             </div>
             <p id="titulopop">titulo</p>
-            <div class="tag">tags</div>
+            <p id="tagpop">tags</p>
         </div> 
          <div class="imgprojeto">
             <img src="" alt="" id="imagempopProjeto" class="imagem-projeto-usuarios">
